--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "build-push:server": "PACKAGE=server ./scripts/build_and_push.sh",
     "build-push:client": "PACKAGE=client ./scripts/build_and_push.sh",
     "lint": "yarn workspaces run lint"
-  }
+  },
+  "packageManager": "yarn@4.2.1"
 }
