--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,11 +14,14 @@
     "check-types": "tsc"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.0",
     "@nest-react/domain": "^1.0.0",
     "@nest-react/lib": "^1.0.0",
     "debug": "^4.3.4",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "semver": "^7.5.2"
   },
   "peerDependencies": {
