--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.3",
     "react-router-dom": "^6.23.0",
     "semver": "^7.5.2",
     "thirdweb": "^5.15.0"
