--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "start:server": "yarn workspace @nest-react/server start:dev",
     "start:common": "(yarn start:domain & yarn start:lib)",
     "contracts:compile": "yarn workspace @nest-react/contracts compile",
+    "contracts:test": "yarn workspace @nest-react/contracts test",
+    "contracts:deploy:baseSepolia": "yarn workspace @nest-react/contracts deploy:baseSepolia",
+    "contracts:test:baseSepolia": "yarn workspace @nest-react/contracts test:baseSepolia",
     "build:domain": "yarn workspace @nest-react/domain build",
     "build:lib": "yarn workspace @nest-react/lib build",
     "build:common": "yarn build:domain && yarn build:lib",
