--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -8,7 +8,9 @@
 		"compile": "hardhat compile",
 		"test": "hardhat test",
 		"coverage": "hardhat coverage",
-		"deploy": "hardhat deploy",
+		"deploy": "hardhat deploy --network base-sepolia",
+		"deploy:baseSepolia": "hardhat run scripts/deploy.ts --network base-sepolia",
+		"test:baseSepolia": "hardhat run scripts/oracleTest.ts --network base-sepolia",
 		"node": "hardhat node",
 		"sol:format:check": "prettier --check --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
 		"sol:format:write": "prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol'",
