--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "contracts:test": "yarn workspace @nest-react/contracts test",
     "contracts:deploy:baseSepolia": "yarn workspace @nest-react/contracts deploy:baseSepolia",
     "contracts:test:baseSepolia": "yarn workspace @nest-react/contracts test:baseSepolia",
+    "contracts:test:reliefLink": "yarn workspace @nest-react/contracts test:reliefLink",
     "start:client": "yarn workspace @nest-react/client-vite start:dev",
     "build:domain": "yarn workspace @nest-react/domain build",
     "build:lib": "yarn workspace @nest-react/lib build",
