--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,9 +29,15 @@
     "@nest-react/lib": "^1.0.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.11",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.4.5",
     "joi": "^17.6.0",
+    "jwks-rsa": "^3.1.0",
+    "passport-auth0": "^1.4.4",
+    "passport-jwt": "^4.0.1",
+    "predicthq": "^0.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6"
@@ -43,6 +49,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^16.11.0",
+    "@types/passport-auth0": "^1",
+    "@types/passport-jwt": "^4",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
