--- a/package.json
+++ b/package.json
@@ -47,12 +47,5 @@
     "build-push:client": "PACKAGE=client ./scripts/build_and_push.sh",
     "lint": "yarn workspaces run lint"
   },
-  "packageManager": "yarn@4.2.1",
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.13",
-    "@mui/icons-material": "^5.15.16",
-    "@mui/material": "^5.15.16"
-  }
+  "packageManager": "yarn@4.2.1"
 }
