--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "joi": "^17.6.0",
     "jwks-rsa": "^3.1.0",
+    "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "passport-jwt": "^4.0.1",
     "predicthq": "^0.2.2",
@@ -49,6 +50,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^16.11.0",
+    "@types/passport": "^0",
     "@types/passport-auth0": "^1",
     "@types/passport-jwt": "^4",
     "@types/supertest": "^2.0.12",
