--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,15 +7,23 @@
     "esModuleInterop": false,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2020"
+    ],
+    "module": "ES2020",
     "noEmit": true,
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ]
     },
     "resolveJsonModule": true,
     "skipLibCheck": false,
-    "target": "ESNext",
-    "types": ["vite/client"]
+    "target": "ES2020",
+    "types": [
+      "vite/client"
+    ]
   }
 }
