--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,9 +32,11 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.11",
+    "@nestjs/swagger": "^7.3.1",
     "dotenv": "^16.4.5",
     "joi": "^17.6.0",
     "jwks-rsa": "^3.1.0",
+    "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "passport-jwt": "^4.0.1",
     "predicthq": "^0.2.2",
@@ -49,6 +51,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^16.11.0",
+    "@types/passport": "^0",
     "@types/passport-auth0": "^1",
     "@types/passport-jwt": "^4",
     "@types/supertest": "^2.0.12",
