--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,8 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^7.3.1",
+    "@worldcoin/idkit": "^1.2.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "joi": "^17.6.0",
     "jwks-rsa": "^3.1.0",
@@ -46,7 +48,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/jest": "^28.1.7",
     "@types/node": "^16.11.0",
     "@types/passport": "^0",
