--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "emitDecoratorMetadata": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "outDir": "dist",
     "paths": {
       "~/*": ["src/*"]
