--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,7 +32,8 @@
     "react-google-autocomplete": "^2.7.3",
     "react-router-dom": "^6.23.0",
     "semver": "^7.5.2",
-    "thirdweb": "^5.15.0"
+    "thirdweb": "^5.15.0",
+    "viem": "^2.9.31"
   },
   "peerDependencies": {
     "@nest-react/server": "1.0.0"
